# game-predictor

./: .gitignore  README.md  _quarto.yml  app.py  index.qmd  pyproject.toml  reference.qmd  report.qmd  scraper.ipynb  tutorial.qmd
data/: rankings.csv  titles.csv
docs/: index.html  reference.html  report.html  search.js  search.json  tutorial.html
docs./: wc_sim.html
src/wc_sim/: __init__.py  simulation.py  validation.py  wrangling.py
tests/: test_simulation.py  test_validation.py  test_wrangling.py
