[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pdoc>=16.0.0",
    "plotly>=6.7.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
