[project]
name = "wc-sim"
version = "0.1.0"
description = "Python package to simulate international soccer match outcomes using FIFA rankings and World Cup history."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Santiago Bolaño" },
  { name = "Emiliano Santacruz" }
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "streamlit>=1.35.0",
  "plotly>=5.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "quarto-cli>=1.6.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
